[gd_scene load_steps=3 format=2]

[ext_resource path="res://addons/godot_xterm/terminal.gd" type="Script" id=1]
[ext_resource path="res://examples/console.gd" type="Script" id=2]

[node name="Console" type="PanelContainer"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 2 )
autostart = true

[node name="_" type="VBoxContainer" parent="."]
margin_left = 7.0
margin_top = 7.0
margin_right = 1017.0
margin_bottom = 593.0

[node name="Terminal" type="Control" parent="_"]
margin_right = 1010.0
margin_bottom = 562.0
focus_mode = 2
size_flags_vertical = 3
script = ExtResource( 1 )

[node name="_" type="HBoxContainer" parent="_"]
margin_top = 566.0
margin_right = 1010.0
margin_bottom = 586.0
grow_vertical = 0

[node name="PowerButton" type="Button" parent="_/_"]
margin_right = 98.0
margin_bottom = 20.0
focus_mode = 1
toggle_mode = true
enabled_focus_mode = 1
text = "Power On/Off"

[node name="PauseButton" type="Button" parent="_/_"]
margin_left = 102.0
margin_right = 213.0
margin_bottom = 20.0
focus_mode = 0
disabled = true
toggle_mode = true
text = "Pause/Unpause"

[connection signal="toggled" from="_/_/PowerButton" to="." method="_on_PowerButton_toggled"]
[connection signal="toggled" from="_/_/PauseButton" to="." method="_on_PauseButton_toggled"]
